cmake_minimum_required(VERSION 3.13)
project(Flight_Simulator)

set(CMAKE_CXX_STANDARD 14)

include_directories(Client)
include_directories(Commands)
include_directories(Expressions)
include_directories(Interpreter)
include_directories(Lexer)
include_directories(Parser)
include_directories(Server)

add_executable(Flight_Simulator
        main.cpp
        Client/Client.cpp
        Client/Client.h
        Commands/Command.h
        Commands/Condition.cpp
        Commands/Condition.h
        Commands/Connect.cpp
        Commands/Connect.h
        Commands/DefineVar.cpp
        Commands/DefineVar.h
        Commands/If.cpp
        Commands/If.h
        Commands/OpenServer.cpp
        Commands/OpenServer.h
        Commands/PutVar.cpp
        Commands/PutVar.h
        Commands/While.cpp
        Commands/While.h
        Commands/Sleep.cpp
        Commands/Sleep.h
        Commands/Print.cpp
        Commands/Print.h
        Expressions/BinaryExpression.cpp
        Expressions/BinaryExpression.h
        Expressions/Expression.cpp
        Expressions/Expression.h
        Expressions/UnaryMinus.cpp
        Expressions/UnaryMinus.h
        Expressions/Number.cpp
        Expressions/Number.h
        Expressions/Minus.cpp
        Expressions/Minus.h
        Expressions/Plus.cpp
        Expressions/Plus.h
        Expressions/Division.cpp
        Expressions/Division.cpp
        Expressions/Multiply.cpp
        Expressions/Multiply.h
        Expressions/Variable.cpp
        Expressions/Variable.h
        Interpreter/Interpreter.cpp
        Interpreter/Interpreter.h
        Interpreter/Symbol.cpp
        Interpreter/Symbol.h
        Interpreter/SymbolMap.cpp
        Interpreter/SymbolMap.h
        Lexer/CodeRow.cpp
        Lexer/CodeRow.h
        Lexer/Lexer.cpp
        Lexer/Lexer.h
        Parser/Parser.cpp
        Parser/Parser.h
        Server/Server.cpp
        Server/Server.h
        Client/get_client.h
        Server/get_server.h)
